--- a/app/styles/components/c-publication-article.scss
+++ b/app/styles/components/c-publication-article.scss
@@ -22,7 +22,7 @@
     color: $color-9;
     font-family: $font-family-1;
     font-size: $font-size-x-medium;
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-normal;
     line-height: 1.4;
   }
 
