added forgotten padding to layout

--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 
 .l-static-page {
-  padding: 85px 0 0;
+  padding: 85px 0;
 
   :global .section-page {
     margin: 0 auto;
