new global styles for links

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -81,44 +81,11 @@ a {
     color: currentColor;
   }
 
-  &.-underline {
-    color: $color-9;
+  :global &.gfw-link {
+    color: $color-19;
     font-weight: $font-weight-bold;
-    position: relative;
-
-    &::after {
-      background-color: $color-6;
-      bottom: 0;
-      content: '';
-      display: inline-block;
-      height: 1px;
-      left: 0;
-      position: absolute;
-      right: 0;
-      top: auto;
-    }
   }
-
-  :global &.-underline {
-    color: $color-9;
-    font-weight: $font-weight-bold;
-    position: relative;
-
-    &::after {
-      background-color: $color-6;
-      bottom: 0;
-      content: '';
-      display: inline-block;
-      height: 1px;
-      left: 0;
-      position: absolute;
-      right: 0;
-      top: auto;
-    }
-  }
-
 }
-
 
 ul {
   list-style: none;
