--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -15,6 +15,11 @@
   }
 
   .contain-text-cover {
+
+    &.-is-empty {
+      min-height: 586px;
+    }
+
     @media #{$mq-tablet} {
       max-width: 870px;
     }
@@ -49,10 +54,6 @@
       margin-top: 20px;
       width: 170px;
     }
-  }
-
-  .stub::after{
-    height: 0px;
   }
 
   //Cover different with quote and different kind of text
