--- a/app/styles/components/c-partner-section.scss
+++ b/app/styles/components/c-partner-section.scss
@@ -1,48 +1,81 @@
 @import '../base';
 
 .c-partner-section {
-  margin-top: 85px;
-  padding-bottom: 90px;
+  margin-top: 20px;
+  padding-bottom: 60px;
+
+  @media #{$mq-tablet} {
+    margin-top: 85px;
+    padding-bottom: 90px;
+  }
 
   .contain-img-logo {
     align-items: center;
     display: flex;
-    height: 90px;
-    margin-bottom: 40px;
+    height: inherit;
+    margin-bottom: 30px;
+
+    @media #{$mq-tablet} {
+      height: 90px;
+      margin-bottom: 40px;
+    }
 
     .img-logo-partners {
       display: block;
       margin: 0 auto;
-      width: 220px;
+      width: 200px;
     }
   }
 
   h2 {
     color: $color-9;
-    font-size: $font-size-xx-big;
+    font-size: $font-size-x-medium;
     font-weight: $font-weight-normal;
     line-height: 1.05;
-    margin-bottom: 70px;
+    margin-bottom: 30px;
+
+    @media #{$mq-tablet} {
+      font-size: $font-size-xx-big;
+      line-height: 1.05;
+      margin-bottom: 70px;
+    }
   }
 
   ul {
     align-content: center;
     align-items: flex-start;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     list-style: none;
 
+    @media #{$mq-tablet} {
+      flex-direction: row;
+    }
+
     li {
-      display: inline-block;
-      padding-right: 22px;
-      width: calc(100% / 3);
+      display: block;
+      margin-bottom: 60px;
+      width: 100%;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      @media #{$mq-tablet} {
+        display: inline-block;
+        margin-bottom: 0;
+        padding-right: 22px;
+        width: calc(100% / 3);
+
+        &:last-child {
+          padding-right: 0;
+        }
+      }
 
       p {
         font-size: $font-size-small;
-      }
-
-      &:last-child {
-        padding-right: 0;
       }
     }
   }
