--- a/app/styles/components/shared/c-rhombus.scss
+++ b/app/styles/components/shared/c-rhombus.scss
@@ -70,7 +70,7 @@
 
   &.-down > .rhombus {
     &::after {
-      transform: translate(calc(-50%), calc(-50% - 2px)) rotate(-90deg);
+      transform: translate(calc(-50% - 2px), calc(-50% - 2px)) rotate(-90deg);
     }
   }
 }
