--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -50,10 +50,23 @@
   position: relative;
 }
 
-.image-iframe {
-  background-image: url('../../../assets/images/iframe_image.jpg');
-  background-size: cover;
-  display: block;
-  height: 100%;
+.map-iframe-container {
+  height: calc(100% - 38px);
   width: 100%;
+
+  &.-placeholder {
+    background-image: url('../../../assets/images/iframe_image.jpg');
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  > iframe {
+    border: 0;
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
 }
