--- a/app/styles/components/c-box-triangle.scss
+++ b/app/styles/components/c-box-triangle.scss
@@ -1,26 +1,30 @@
 @import '../settings';
 
 .c-box-triangle {
+  display: none;
 
-  border-bottom: 2px solid $color-4;
-  border-right: 2px solid $color-4;
-  cursor: pointer;
-  height: 52px;
-  left: 50%;
-  margin-bottom: -115px;
-  position: relative;
-  transform: translateX(-50%) rotate(-135deg);
-  width: 52px;
-
-  .triangle-min {
+  @media #{$mq-tablet} {
     border-bottom: 2px solid $color-4;
     border-right: 2px solid $color-4;
-    height: 12px;
-    margin-bottom: 0;
-    margin-left: 32px;
-    position: absolute;
-    top: 32px;
-    transform: rotate(-180deg);
-    width: 12px;
+    cursor: pointer;
+    display: block;
+    height: 52px;
+    left: 50%;
+    margin-bottom: -115px;
+    position: relative;
+    transform: translateX(-50%) rotate(-135deg);
+    width: 52px;
+
+    .triangle-min {
+      border-bottom: 2px solid $color-4;
+      border-right: 2px solid $color-4;
+      height: 12px;
+      margin-bottom: 0;
+      margin-left: 32px;
+      position: absolute;
+      top: 32px;
+      transform: rotate(-180deg);
+      width: 12px;
+    }
   }
 }
