--- a/app/styles/layout/l-homepage.scss
+++ b/app/styles/layout/l-homepage.scss
@@ -2,10 +2,40 @@
 
 .infomap {
   align-items: center;
-  background:
-  linear-gradient(to right, $color-23, $color-24),
-  url('../../../assets/images/iframe_image.jpg');
+  background-image: url('../../assets/images/iframe_image.jpg');
+  background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  height: 748px;
+  font-family: $font-family-1;
+  height: 520px;
+  position: relative;
+
+  @media #{$mq-tablet} {
+    height: 748px;
+  }
+
+  &::after {
+    background: linear-gradient(to right, $color-11, rgba($color-2, 0));
+    bottom: 0;
+    content: '';
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 0;
+  }
+}
+
+.success-story {
+  background-color: $color-4;
+  font-family: $font-family-1;
+  padding: 85px 110px 96px;
+
+  h2 {
+    color: $color-9;
+    font-size: $font-size-xx-big;
+    font-weight: $font-weight-normal;
+    line-height: 1.05;
+    margin-bottom: 20px;
+  }
 }
