--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -71,7 +71,11 @@
 
   //Cover different with quote and different kind of text
   .leo-slider {
-    padding-top: 170px;
+    padding-top: 25px;
+
+    @media #{$mq-tablet} {
+      padding-top: 170px;
+    }
 
     .contain-quote-text {
       max-width: 460px;
@@ -122,7 +126,11 @@
     font-size: $font-size-x-normal;
     font-weight: $font-weight-bold;
     letter-spacing: -.1px;
-    margin-bottom: 170px;
+    margin-bottom: 0;
+
+    @media #{$mq-tablet} {
+      margin-bottom: 170px;
+    }
 
   }
 
@@ -131,7 +139,12 @@
     color: $color-4;
     display: flex;
     justify-content: flex-end;
-    padding-bottom: 20px;
+    padding-bottom: 60px;
+
+    @media #{$mq-tablet} {
+      margin-bottom: 10px;
+      padding-bottom: 0;
+    }
 
     svg {
       cursor: pointer;
@@ -154,10 +167,28 @@
     }
   }
 
-  .ldf-logo {
-    display: block;
-    margin-top: 15px;
-    width: 140px;
+  .contain-ldf {
+    margin: 20px auto 0;
+
+    @media #{$mq-tablet} {
+      margin: inherit;
+    }
+
+    .brought-text {
+      color: $color-4;
+      display: block;
+      letter-spacing: -.1px;
+
+      @media #{$mq-tablet} {
+        display: none;
+      }
+    }
+
+    .ldf-logo {
+      display: block;
+      margin-top: 15px;
+      width: 140px;
+    }
   }
 
   //dots control de slider at home
@@ -165,7 +196,13 @@
     line-height: 0;
     list-style: none;
     position: relative;
-    top: 0;
+    text-align: center;
+    top: 140px;
+
+    @media #{$mq-tablet} {
+      text-align: inherit;
+      top: 0;
+    }
 
     :global .slick-active {
       button {
@@ -182,24 +219,35 @@
         background: $color-4;
         border: 0;
         font-size: 0;
-        height: 15px;
-        margin-right: 15px;
+        height: 5px;
+        margin-right: 10px;
         outline: 0;
         position: relative;
         transform: rotate(45deg);
-        width: 15px;
+        width: 5px;
         z-index: 2;
+
+        @media #{$mq-tablet} {
+          height: 15px;
+          margin-right: 15px;
+          width: 15px;
+        }
       }
 
       &::after {
         background-color: $color-4;
         content: '';
+        display: none;
         height: 1px;
         left: 55%;
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
         width: 12px;
+
+        @media #{$mq-tablet} {
+          display: block;
+        }
       }
 
       &:last-child {
