update styles and add new image to info map section on home page

--- a/app/styles/components/c-info-map-content.scss
+++ b/app/styles/components/c-info-map-content.scss
@@ -1,7 +1,9 @@
 @import '../settings';
 
 .c-info-map-content {
+  position: relative;
   width: 360px;
+  z-index: 1;
 
   h2 {
     color: $color-4;
