--- a/app/styles/components/c-footer.scss
+++ b/app/styles/components/c-footer.scss
@@ -11,14 +11,14 @@
     padding: 0 0 30px;
 
     @media #{$mq-mobile-large} {
-      display: flex;
-      flex-wrap: wrap;
       justify-content: space-between;
-      padding: 0 50px 55px 0;
+      padding: 0 0 50px;
     }
 
-    @media #{$mq-tablet} {
-      flex-wrap: nowrap;;
+    @media screen and (min-width: 845px) {
+      align-items: flex-end;
+      display: flex;
+      flex-wrap: wrap;
     }
 
     .partner-footer,
@@ -34,8 +34,15 @@
         list-style: none;
         width: 100%;
 
+        @media #{$mq-tablet} {
+          width: 200px;
+        }
+
         li {
-          width: 100%;
+
+          @media screen and (min-width: 845px) {
+            text-align: right;
+          }
         }
       }
 
@@ -46,7 +53,7 @@
         margin-bottom: 15px;
         margin-top: 45px;
 
-        @media screen and (min-width: 675px) {
+        @media screen and (min-width: 845px) {
           display: none;
         }
       }
@@ -54,48 +61,48 @@
       .logo-item {
         margin-right: 15px;
 
+        &:last-child {
+          margin-right: 0;
+        }
+
         @media #{$mq-laptop} {
           margin-right: 55px;
+
+          &:last-child {
+            margin-right: 0;
+          }
         }
 
         .logo-ldf {
-          width: calc(100%/3);
-
-          @media #{$mq-mobile-large} {
-            min-width: 130px;
-            width: calc(100%/3);
-          }
+          max-width: 130px;
+          width: calc(100% / 3);
 
           @media #{$mq-tablet} {
-            width: 180px;
+            width: 100%;
+          }
+
+          @media screen and (min-width: 845px) {
+            max-width: 200px;
+            position: relative;
+            top: 12px;
           }
         }
       }
 
       .logo-item > .logo {
         display: block;
-        max-width: 100px;
+        max-width: 130px;
         width: 100%;
 
 
-        @media #{$mq-tablet} {
-          max-width: none;
-          width: 130px;
-        }
-
         &.-oceana {
-          max-width: 100px;
+          max-width: 130px;
 
-          @media #{$mq-tablet} {
-            max-width: none;
-            width: 175px;
-          }
         }
       }
     }
 
     .partner-footer {
-
       > .partner-text {
         color: $color-16;
         display: block;
@@ -105,15 +112,6 @@
         @media #{$mq-laptop} {
           margin-bottom: 35px;
         }
-      }
-    }
-
-    .sponsor-footer {
-      align-items: flex-end;
-      display: flex;
-
-      @media #{$mq-mobile-large} {
-        margin-top: 0;
       }
     }
   }
@@ -128,7 +126,7 @@
     @media #{$mq-tablet} {
       flex-wrap: nowrap;
       justify-content: space-between;
-      padding: 55px 50px 60px 0;
+      padding: 55px 0 60px;
     }
 
     .nav-section {
@@ -158,8 +156,11 @@
 
       @media #{$mq-tablet} {
         -moz-column-count: 3;
+        -moz-column-gap: 60px;
         column-count: 3;
+        column-gap: 60px;
         margin-bottom: 0;
+        margin-right: 35px;
         width: inherit;
       }
     }
@@ -230,12 +231,13 @@
         display: flex;
         font-size: $font-size-x-small;
         margin: inherit;
-        max-width: 175px;
+        max-width: 230px;
         padding: 10px 15px;
       }
 
       > .email-subscribe {
         margin-left: 10px;
+        min-width: 18px;
         width: 18px;
       }
     }
@@ -248,6 +250,7 @@
 
       @media #{$mq-tablet} {
         display: flex;
+        justify-content: flex-start;
         margin-top: 35px;
       }
 
@@ -276,6 +279,7 @@
           height: 32px;
           justify-content: center;
           margin-left: 20px;
+          min-width: 32px;
           width: 32px;
 
           @media #{$mq-tablet} {
@@ -297,12 +301,14 @@
 
           &:first-child {
             img {
+              min-width: 16px;
               width: 16px;
             }
           }
 
           &:last-child {
             img {
+              min-width: 10px;
               width: 10px;
             }
           }
