--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -93,35 +93,6 @@ ul {
   padding: 0;
 }
 
-.section-title {
-  color: $color-9;
-  display: block;
-  font-size: $font-size-x-medium;
-  font-weight: $font-weight-normal;
-  line-height: 1.44;
-  margin: 20px 0 25px;
-
-  max-width: 700px;
-  width: 100%;
-
-  @media #{$mq-tablet} {
-    font-size: $font-size-xx-big;
-    line-height: 1.05;
-    margin: 60px 0 18px;
-  }
-}
-
-:global .section-title {
-  color: $color-9;
-  display: block;
-  font-size: $font-size-xx-big;
-  font-weight: $font-weight-normal;
-  line-height: 1.05;
-  margin: 60px 0 18px;
-  max-width: 700px;
-  width: 100%;
-}
-
 :global .section-page {
   padding: 55px 0 65px;
   position: relative;
@@ -150,4 +121,18 @@ ul {
       content: none;
     }
   }
+}
+
+:global .section-title {
+  color: $color-9;
+  font-size: $font-size-xx-big;
+  font-weight: $font-weight-normal;
+  line-height: 1;
+}
+
+:global .section-subtitle {
+  color: $color-9;
+  font-size: $font-size-x-medium;
+  font-weight: $font-weight-normal;
+  line-height: 1.4;
 }
