--- a/app/styles/components/c-funder-section.scss
+++ b/app/styles/components/c-funder-section.scss
@@ -34,11 +34,34 @@
   .funder-logos {
     align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     margin-top: 110px;
 
-    img {
-      max-width: 200px;
+    @media #{$mq-tablet} {
+      flex-direction: row;
     }
+  }
+
+  .funder-logo {
+    flex: 1 1 auto;
+    margin: 10px;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .funder-logo-padding {
+    > div {
+      background: $color-4;
+      margin: 10%;
+      width: 80%;
+      > img {
+        margin: 5%;
+        width: 90%;
+      }
+    }
+
   }
 }
