Homepage map image

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -56,6 +56,8 @@ $color-19: #174084;
 $color-20: #bfbfbf;
 $color-21: #121a2a; // UI kit map
 $color-22: rgba(7, 51, 56, .3); // UI kit map
+$color-23: #032044; // used for gradient at homepage
+$color-24: rgba(3, 32, 68, 0); // used for gradient at homepage
 
 // Colors to review
 $color-14: #2d3a57;
