Copy and minor css changes

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -58,13 +58,14 @@ $color-21: #121a2a; // UI kit map
 $color-22: rgba(7, 51, 56, .3); // UI kit map
 $color-23: #032044; // used for gradient at homepage
 $color-24: rgba(3, 32, 68, 0); // used for gradient at homepage
+$color-25: rgba(255, 255, 255, .7); // image attribution
 
 // Colors to review
 $color-14: #2d3a57;
 $color-15: #0d1d3f;
-$color-16: rgba(255, 255, 255, 0.9);
+$color-16: rgba(255, 255, 255, .9);
 $color-17: #111;
-$color-18: rgba(255, 255, 255, 0.9);
+$color-18: rgba(255, 255, 255, .9);
 
 
 // Breakpoints
