fix style cover home page error

--- a/app/styles/components/c-box-triangle.scss
+++ b/app/styles/components/c-box-triangle.scss
@@ -10,8 +10,9 @@
     display: block;
     height: 52px;
     left: 50%;
-    margin-bottom: -115px;
+    margin-bottom: -100px;
     position: relative;
+    top: 15px;
     transform: translateX(-50%) rotate(-135deg);
     width: 52px;
 
