--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -147,8 +147,7 @@
     padding-bottom: 60px;
 
     @media #{$mq-tablet} {
-      margin-bottom: 10px;
-      padding-bottom: 0;
+      padding-bottom: 20px;
     }
 
     svg {
