fix responsive header on hompepage

--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -16,7 +16,10 @@
 
   &.-is-home {
     .contain-text-cover {
-      min-height: 686px;
+
+      @media #{$mq-tablet} {
+        min-height: 686px;
+      }
 
       &.-is-empty {
         min-height: 586px;
