--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -63,7 +63,10 @@
 
   &.-tutorials {}
 
-  &.-about {}
+  &.-about {
+    margin: 0 auto;
+    max-width: 700px;
+  }
 
   &.-research-program {
     margin: 0 auto;
