fix bug message contact page

--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 
 .c-contact-form {
-  margin: 0 auto;
+  margin: 35px auto 0;
   max-width: 480px;
   padding-bottom: 85px;
   position: relative;
