--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -61,7 +61,25 @@
 
   &.-definitions {}
 
-  &.-tutorials {}
+  &.-tutorials {
+    .video-container {
+      margin: 30px -25px 0;
+      padding-bottom: 56.25%;
+      position: relative;
+
+      @media #{$mq-tablet} {
+        margin: 30px 0 0;
+      }
+
+      iframe {
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+      }
+    }
+  }
 
   &.-about {
     margin: 0 auto;
