--- a/app/styles/components/map/c-no-login.scss
+++ b/app/styles/components/map/c-no-login.scss
@@ -10,20 +10,8 @@
     position: absolute;
     top: 12px;
 
-    a {
+    > a  {
       color: $color-4;
-      cursor: pointer;
-      display: inline-block;
-      font-family: $font-family-1;
-      text-decoration: none;
-
-      &::after {
-        background-color: $color-6;
-        content: '';
-        display: block;
-        height: 1px;
-        margin-top: 1px;
-      }
     }
   }
 
@@ -42,7 +30,6 @@
     color: $color-4;
     cursor: pointer;
     display: inline-block;
-    text-decoration: none;
 
     &::after {
       background-color: $color-6;
@@ -52,5 +39,4 @@
       margin-top: 1px;
     }
   }
-
 }
