--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -1,20 +1,16 @@
 @import '../settings';
 
 .c-contact-form {
-  margin: 35px auto 0;
-  max-width: 480px;
-  padding-bottom: 85px;
+  margin: 30px auto 0;
+  padding-bottom: 60px;
   position: relative;
   width: 100%;
   z-index: 1;
 
-  h1 {
-    color: $color-4;
-    font-size: $font-size-xxx-big;
-    font-weight: $font-weight-bold;
-    letter-spacing: -1px;
-    margin: 40px 0 30px;
-    text-align: center;
+  @media #{$mq-tablet} {
+    margin: 35px auto 0;
+    max-width: 480px;
+    padding-bottom: 100px;
   }
 
   &.message-after {
@@ -22,13 +18,6 @@
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-  }
-
-  p {
-    color: $color-4;
-    font-size: $font-size-x-medium;
-    margin-bottom: 30px;
-    text-align: center;
   }
 
   label,
