update partner page responsive

--- a/app/styles/components/c-funder-section.scss
+++ b/app/styles/components/c-funder-section.scss
@@ -31,12 +31,12 @@
     justify-content: center;
 
     @media #{$mq-tablet} {
-      padding-left: 90px;
-      padding-right: 90px;
+      flex-direction: row;
     }
 
-    @media #{$mq-tablet} {
-      flex-direction: row;
+    @media #{$mq-laptop} {
+      padding-left: 90px;
+      padding-right: 90px;
     }
 
     img {
@@ -73,18 +73,23 @@
       margin-top: 110px;
     }
 
-    img {
-      margin-bottom: 50px;
-      max-width: 180px;
-      width: 100%;
+    .funder-logo {
+      flex: 1 1 auto;
+      margin: 15px;
 
-      &:last-child {
-        margin-bottom: 0;
-      }
+      img {
+        margin-bottom: 50px;
+        max-width: 180px;
+        width: 100%;
 
-      @media #{$mq-tablet} {
-        margin-bottom: 0;
-        max-width: 200px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        @media #{$mq-tablet} {
+          margin-bottom: 0;
+          max-width: 200px;
+        }
       }
     }
   }
