--- a/app/styles/components/c-research-section.scss
+++ b/app/styles/components/c-research-section.scss
@@ -35,7 +35,7 @@
     padding-left: 28px;
     padding-right: 43px;
 
-    @media #{$mq-tablet} {
+    @media #{$mq-laptop} {
       padding-left: 135px;
       padding-right: 135px;
     }
@@ -49,7 +49,7 @@
   }
 
   :global .slick-slide {
-    padding: 5px;
+    padding: 10px;
   }
 
   :global .slick-next,
