--- a/app/styles/components/c-tooltip-info.scss
+++ b/app/styles/components/c-tooltip-info.scss
@@ -4,6 +4,7 @@
 .c-tooltip-info {
   border: 0 !important;
   cursor: pointer;
+  display: inline-block; // Don't change to inline otherwise the tooltip will be broken
   position: relative;
 
   .image-icon {
@@ -12,34 +13,16 @@
     width: 15px;
   }
 
-  // > .c-tooltip-info-title::after {
-  //   background: url('../../assets/icons/info_gray.svg');
-  //   background-repeat: no-repeat;
-  //   content: '';
-  //   display: inline-block;
-  //   height: 15px;
-  //   margin-left: 4px;
-  //   width: 15px;
-  // }
-
-  // > .c-tooltip-info-title.-white::after {
-  //   background: url('../../assets/icons/info_white.svg');
-  // }
-  //
-  // > .c-tooltip-info-title.-black::after {
-  //   background: url('../../assets/icons/info_black.svg');
-  // }
-
   > .c-tooltip-info-content {
     background: $color-19;
+    bottom: auto;
     box-shadow: 0 2px 4px 0 rgba($color-12, .5);
     color: $color-4;
-    margin-left: 100px;
     padding: 15px 0;
     position: absolute;
-    right: -90px;
+    right: 0;
     text-align: center;
-    top: 33px;
+    top: 0;
     width: 200px;
     z-index: 99;
 
@@ -56,35 +39,21 @@
       width: 0;
     }
 
-    &.right {
-      right: 25px;
-      top: -33px;
+    &.-right {
+      right: 10px;
 
       &::after {
-        border: 6px solid;
-        border-color: transparent transparent $color-19 $color-19;
-        content: '';
-        height: 0;
         left: 194px;
-        right: 0;
         top: 35px;
         transform: scale(1, -1) rotate(-135deg);
-        width: 0;
       }
     }
 
-    &.left {
-      top: -7px;
-
+    &.-left {
       &::after {
-        border: 6px solid;
-        border-color: transparent transparent $color-19 $color-19;
-        content: '';
-        height: 0;
         left: -6px;
         top: 35px;
         transform: scale(1, -1) rotate(45deg);
-        width: 0;
       }
     }
   }
