--- a/app/styles/components/c-publication-article.scss
+++ b/app/styles/components/c-publication-article.scss
@@ -4,6 +4,16 @@
   flex-basis: 100%;
   margin-bottom: 60px;
 
+  &:first-child {
+    margin-top: 30px;
+  }
+
+  @media #{$mq-tablet} {
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
 
   @media #{$mq-tablet} {
     flex-basis: calc(50% - 10px);
