--- a/app/styles/components/shared/c-content-accordion.scss
+++ b/app/styles/components/shared/c-content-accordion.scss
@@ -8,11 +8,11 @@
 
   > .accordion-item {
     border-bottom: 2px solid $color-10;
-    padding: 25px 0;
+    padding: 25px 0 30px;
     position: relative;
 
     &:first-child {
-      padding-top: 0;
+      padding-top: 5px;
     }
 
     &:last-child {
