--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -13,29 +13,31 @@
     :global .section-title {
       margin: 0 0 25px;
 
+      &.article-page {
+        margin-bottom: 0;
+
+        @media #{$mq-tablet} {
+          margin: 0 0 60px;
+        }
+      }
+
       @media #{$mq-tablet} {
         margin: 0 0 60px;
       }
+
     }
   }
 
   &.-faq {
     .question-group {
       :global .section-title {
-        margin: 60px 0 0;
-        padding: 60px 0;
+        margin: 20px 0 0;
+        padding: 20px 0;
         position: relative;
 
-        &::after {
-          background-color: $color-10;
-          content: '';
-          display: inline-block;
-          height: 2px;
-          left: 50%;
-          position: absolute;
-          top: 0;
-          transform: translate(-50%, 0);
-          width: 100vw;
+        @media #{$mq-tablet} {
+          margin: 50px 0 0;
+          padding: 60px 0;
         }
       }
 
