fix FAQ,Contact and Articles and Publication pages styles

--- a/app/styles/components/c-button.scss
+++ b/app/styles/components/c-button.scss
@@ -25,6 +25,7 @@
 .c-button-contact { //will be .c-button-submit-large
   background-color: $color-3;
   border: 0;
+  border-radius: 0;
   color: $color-4;
   display: block;
   font-size: $font-size-normal;
