--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -40,6 +40,7 @@
   .input-text {
     background-color: $color-4;
     border: solid 1px $color-10;
+    border-radius: 0;
     margin-bottom: 10px;
     outline: 0;
     padding: 10px;
