--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -6,6 +6,20 @@
   position: relative;
   transition: background-image .2s ease-in-out;
 
+  .links-home-page {
+    align-items: center;
+    color: $color-4;
+    display: flex;
+    font-size: $font-size-small;
+    font-weight: $font-weight-bold;
+    margin-top: 40px;
+    text-transform: uppercase;
+
+    img {
+      margin-right: 10px;
+    }
+  }
+
   .layer-cover {
     background-color: rgba($color-19, .8);
     height: 100%;
