add rhombus component on new pages and create class global for links

--- a/app/styles/components/shared/c-content-accordion.scss
+++ b/app/styles/components/shared/c-content-accordion.scss
@@ -40,6 +40,16 @@
     right: 0;
     top: 50%;
     transform: translateY(-50%);
+
+    img {
+      transition: transform .5s;
+    }
+
+    &.rhombus-opened {
+      img {
+        transform: rotate(90deg);
+      }
+    }
   }
 
   > .accordion-item .item-content {
