--- a/app/styles/components/c-mobile-menu.scss
+++ b/app/styles/components/c-mobile-menu.scss
@@ -31,6 +31,11 @@
       font-size: $font-size-x-normal;
       font-weight: $font-weight-bold;
       line-height: 2.58;
+
+      a {
+        //Color for Android and IOS
+        color: $color-4;
+      }
     }
   }
 
