Makes the scroll smooth in the mobile drawer

--- a/app/styles/components/c-mobile-menu.scss
+++ b/app/styles/components/c-mobile-menu.scss
@@ -1,6 +1,7 @@
 @import '../settings';
 
 .c-mobile-menu {
+  -webkit-overflow-scrolling: touch;
   background-color: $color-11;
   bottom: 0;
   box-shadow: 0 2px 4px 0 rgba($color-12, .5);
