--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -1,5 +1,53 @@
 @import '../../settings';
 
+.contain-responsive-buttons {
+  align-items: center;
+  background-color: $color-13;
+  display: flex;
+  height: 30px;
+  justify-content: space-around;
+
+  span {
+    color: $color-4;
+    cursor: pointer;
+    font-family: $font-family-1;
+    font-size: $font-size-xs-small;
+    font-weight: $font-weight-bold;
+  }
+}
+
+.contain-responsive-attributions {
+  background-color: rgba($color-9, .5);
+  padding: 0 4px;
+
+  @media screen and (min-width: 900px) {
+    display: none;
+  }
+
+  ul {
+    align-items: center;
+    display: flex;
+    height: 20px;
+    justify-content: space-between;
+    list-style: none;
+
+    div {
+      display: flex;
+
+      li {
+        color: $color-4;
+        display: inline-block;
+        font-size: $font-size-tiny;
+
+        a {
+          color: $color-4;
+          font-size: $font-size-tiny;
+        }
+      }
+    }
+  }
+}
+
 .c-footer-mini {
   align-items: center;
   background-color: $color-1;
@@ -11,13 +59,22 @@
   .contain-partners {
     align-items: center;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    width: 100%;
+
+    @media screen and (min-width: 900px) {
+      justify-content: center;
+      width: inherit;
+    }
 
     .partner {
       height: auto;
-      margin-right: 15px;
       max-width: 70px;
       width: 100%;
+
+      @media screen and (min-width: 900px) {
+        margin-right: 15px;
+      }
     }
 
     .oceana {
@@ -35,6 +92,14 @@
       display: inline-block;
       font-size: $font-size-tiny;
       margin-left: 15px;
+    }
+
+    .attributions {
+      display: none;
+
+      @media screen and (min-width: 900px) {
+        display: inline-block;
+      }
     }
 
     a {
